# hueplex-python

./: .gitignore  Dockerfile  Makefile  action_config.yaml  pyproject.toml
hueplex/: PayloadModels.py  __main__.py  hue_api.py  payload.py  payload_models.py  server.py
hueplex/api/: hue.py  plex.py  status.py
hueplex/lib/: responses.py
hueplex/models/: admin.py  base.py  library.py  media.py
static/: output.css
templates/: index.html  status_page.html
templates/hue/: hue_base.html  no_auth.html
