[tool.poetry]
name = "hueplex"
version = "0.1.0"
description = ""
authors = ["Jeremy <jeremy.schiemann@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
